--- a/reims_example.ipynb
+++ b/reims_example.ipynb
@@ -52,10 +52,10 @@
     }
    ],
    "source": [
-    "%cd /home/ludovico/mounted/SynthGPS\n",
+    "%cd /home/lwdovico/SynthGPS\n",
     " \n",
     "import geomob\n",
-    "from synth_gps.utils import get_and_save_bbox\n",
+    "from synthmob.utils import get_and_save_bbox\n",
     "\n",
     "AOI = f'aoi_{city_name}.geojson'\n",
     "\n",
@@ -182,7 +182,7 @@
     }
    ],
    "source": [
-    "from synth_gps.utils import load_resources, get_tiles_wph\n",
+    "from synthmob.utils import load_resources, get_tiles_wph\n",
     "import numpy as np\n",
     "\n",
     "OVERTURE = 'overture_s3_urls.json'\n",
@@ -205,7 +205,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from synth_gps.roads import RoadProcessor\n",
+    "from synthmob.roads import RoadProcessor\n",
     "\n",
     "roads_pipeline = RoadProcessor(rv, metric_projection)\n",
     "\n",
@@ -266,8 +266,8 @@
     }
    ],
    "source": [
-    "from synth_gps.building import BuildingProcessor, point_filling_geometries\n",
-    "from synth_gps.metadata import generate_uids\n",
+    "from synthmob.building import BuildingProcessor, point_filling_geometries\n",
+    "from synthmob.metadata import generate_uids\n",
     "\n",
     "bv_inhabitants = BuildingProcessor(bv, metric_projection).get_default_features(bbox_tess)\n",
     "home_locations = point_filling_geometries(bv_inhabitants, n_point_feature = 'inhabitants')\n",
@@ -301,7 +301,7 @@
     }
    ],
    "source": [
-    "from synth_gps.pois import POIsProcessor\n",
+    "from synthmob.pois import POIsProcessor\n",
     "\n",
     "poi_pipeline = POIsProcessor(pv, metric_projection)\n",
     "poi_pipeline.add_building_area(bv)\n",
@@ -375,7 +375,7 @@
     }
    ],
    "source": [
-    "from synth_gps.od import odGenerator\n",
+    "from synthmob.od import odGenerator\n",
     "import geopandas as gpd\n",
     "\n",
     "home_locations_reprojected = home_locations.to_crs(metric_projection)\n",
@@ -449,7 +449,7 @@
     }
    ],
    "source": [
-    "from synth_gps.metadata import SynthGPS\n",
+    "from synthmob.metadata import SynthGPS\n",
     "\n",
     "meters_road_buffer = 5\n",
     "max_pings_per_user = 100\n",
@@ -494,7 +494,7 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "from synth_gps.metadata import get_midnight\n",
+    "from synthmob.metadata import get_midnight\n",
     "\n",
     "get_data_for_days = 30\n",
     "\n",
