Adding OVERTURE download to notebooks

--- a/reims_example.ipynb
+++ b/reims_example.ipynb
@@ -186,6 +186,7 @@
     "import numpy as np\n",
     "\n",
     "OVERTURE = 'overture_s3_urls.json'\n",
+    "!wget -O $OVERTURE https://raw.githubusercontent.com/lwdovico/synthmob/main/overture_s3_urls.json\n",
     "\n",
     "resources = load_resources(n_cores=10, aoi_path=AOI, resources_path=OVERTURE)\n",
     "pv, rv, bv, aoi = resources['POIS'], resources['ROADS'], resources['BUILDINGS'], resources['AOI']\n",
